identitymanager/keycloak/k8s/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/stream-snippet: |
      proxy_buffer_size 128k;
      proxy_buffers     4 256k;
      proxy_busy_buffers_size   256k;
spec:
  tls:
    - hosts:
      - bm2c.krugercorp.com
      secretName: bm2c-tls-sct
  rules:
  - host: bm2c.krugercorp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
